Adding New Experiments

--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,8 +1,8 @@
-#Tue Feb 27 00:22:15 EST 2018
-sequencesNeeded=100
+#Tue Feb 27 18:15:31 EST 2018
+sequencesNeeded=20000
 secondExpert=3
-startFirst=Y
-maxRequest=20
+startFirst=N
+maxRequest=1000
 firstExpert=1
-noiseLevel=1
-cacheSize=5
+noiseLevel=10
+cacheSize=100
