--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,8 +1,8 @@
-#Tue Feb 27 18:15:31 EST 2018
+#Tue Feb 27 23:33:39 EST 2018
 sequencesNeeded=20000
 secondExpert=3
-startFirst=N
+startFirst=Y
 maxRequest=1000
 firstExpert=1
-noiseLevel=10
+noiseLevel=5
 cacheSize=100
