--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,8 +1,10 @@
-#Tue Feb 27 23:33:39 EST 2018
-sequencesNeeded=20000
+#Fri Mar 02 08:13:43 EST 2018
+Description=This trace behavior is as follow ARC_LRU_ARC_LRU_ARC_LRU_ARC_LRU_ARC_LRU
 secondExpert=3
-startFirst=Y
-maxRequest=1000
+maxRequest=10000
+sequencesNeeded=100000
+cacheSize=500
+noiseLevel=10
+numChanges=10
+startFirst=N
 firstExpert=1
-noiseLevel=5
-cacheSize=100
