--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,10 +1,10 @@
-#Fri Mar 02 08:13:43 EST 2018
-Description=This trace behavior is as follow ARC_LRU_ARC_LRU_ARC_LRU_ARC_LRU_ARC_LRU
+#Wed Mar 07 01:02:06 EST 2018
+Description=This trace behavior is as follow LFU_ARC_LFU_ARC_LFU_ARC_LFU_ARC_LFU_ARC
 secondExpert=3
-maxRequest=10000
+maxRequest=7500
 sequencesNeeded=100000
-cacheSize=500
-noiseLevel=10
+cacheSize=1000
+noiseLevel=5
 numChanges=10
-startFirst=N
-firstExpert=1
+startFirst=Y
+firstExpert=2
