--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,10 +1,10 @@
-#Wed Mar 07 01:02:06 EST 2018
-Description=This trace behavior is as follow LFU_ARC_LFU_ARC_LFU_ARC_LFU_ARC_LFU_ARC
+#Wed Mar 07 02:14:35 EST 2018
+Description=This trace behavior is as follow LFU_ARC_LFU_ARC
 secondExpert=3
 maxRequest=7500
 sequencesNeeded=100000
 cacheSize=1000
 noiseLevel=5
-numChanges=10
+numChanges=4
 startFirst=Y
 firstExpert=2
