Added the Pollution analysis

--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,10 +1,10 @@
-#Wed Mar 07 02:14:35 EST 2018
-Description=This trace behavior is as follow LFU_ARC_LFU_ARC
-secondExpert=3
-maxRequest=7500
-sequencesNeeded=100000
-cacheSize=1000
+#Mon Mar 12 23:21:44 EDT 2018
+Description=This trace behavior is as follow LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU...
+secondExpert=2
+maxRequest=10000
+sequencesNeeded=150000
+cacheSize=500
 noiseLevel=5
-numChanges=4
+numChanges=100
 startFirst=Y
-firstExpert=2
+firstExpert=1
