Adding more images

--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,10 +1,10 @@
-#Mon Mar 12 23:21:44 EDT 2018
-Description=This trace behavior is as follow LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU...
+#Tue Mar 13 22:48:49 EDT 2018
+Description=This trace behavior is as follow LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU
 secondExpert=2
 maxRequest=10000
 sequencesNeeded=150000
 cacheSize=500
 noiseLevel=5
-numChanges=100
-startFirst=Y
+numChanges=4
+startFirst=N
 firstExpert=1
