--- a/Generator/config.properties
+++ b/Generator/config.properties
@@ -1,10 +1,10 @@
-#Tue Mar 13 22:48:49 EDT 2018
-Description=This trace behavior is as follow LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU
+#Wed Mar 14 01:46:14 EDT 2018
+Description=This trace behavior is as follow LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU_LFU_LRU...
 secondExpert=2
 maxRequest=10000
 sequencesNeeded=150000
 cacheSize=500
 noiseLevel=5
-numChanges=4
+numChanges=10
 startFirst=N
 firstExpert=1
