--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=C:\\Users\\Luis\\Desktop\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=C:\\Users\\Luis\\Desktop\\Executable\\lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\Luis\\Desktop\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Luis\\Desktop\\Executable\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
